package ar.edu.utn.frc.tup.piii.enums;

public enum Color {
    RED,
    BLUE,
    GREEN,
    YELLOW,
    PURPLE,
    ORANGE
}