package ar.edu.utn.frc.tup.piii.enums;

public enum PlayerType {
    BOT,
//    BOT_MEDIUM,
//    BOT_HARD,
    PLAYER
}